--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.16.2",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
+    "react-picky-date-time": "^1.3.2",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.0.11",
