--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
-
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +21,7 @@
     "concurrently": "^3.6.1",
     "cookie-session": "^1.3.2",
     "express": "^4.16.4",
+    "form-urlencoded": "^3.0.0",
     "localtunnel": "^1.9.1",
     "lodash": "^4.17.11",
     "mongoose": "^4.13.18",
